Updates dockerfile for tesseract-4.0.0
This get's rid of having to installd the entire SDK along with the JRE,
just to be able to specify a toolchain file.

This also gets rid of unused ABI argument.